--- a/.env-temp
+++ b/.env-temp
@@ -9,3 +9,6 @@ uriDB = mongodb://xx.xx.xx.xx:27017/?connectTimeoutMS=20000&socketTimeoutMS=2000
 nmDB = xxxxx
 
 uriMQ = pulsar://xx.xx.xx.xx:6650
+
+API_KEY = xxxxx
+API_SECRET = xxxxx
