--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ multidict==6.0.4
 pycares==4.3.0
 pycparser==2.21
 PySocks==1.7.1
+python-dotenv==1.0.0
 requests==2.28.2
 urllib3==1.26.15
 yarl==1.8.2
